# weverywhere

./: CNAME  Cargo.toml  compile-example-programs.py  index.html  readme.md  update-github-pages.py  zig-build-all-targets.py
etc/: weverywhere.toml
example-programs/: report-sysinfo-executor.c  report-sysinfo-reactor.c
include/: weverywhere.h
src/: args.rs  comm.rs  command.rs  config.rs  crypto_utils.rs  err_utils.rs  fs_utils.rs  main.rs  net_utils.rs  sys_utils.rs  universal_serde.rs
src/command/: configuration.rs  info.rs  install_to.rs  mod.rs  run.rs  run_local.rs  serve.rs
src/executor/: mod.rs  wasi_adapters.rs
src/messages/: mod.rs
