[package]
name = "weverywhere"
version = "0.1.0"
edition = "2024"

[dependencies]
toml = "0.9"

serde_json = "1.0"
serde_cbor = "0.11"
serde_bare = "0.5"

get_if_addrs = "0.5"


[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.wasmtime]
version = "38"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.ring]
version = "0.17"
features = ["wasm32_unknown_unknown_js"]


[target.'cfg(windows)'.dependencies]


[target.'cfg(unix)'.dependencies]
libc = "0.2"
