[package]
name = "weverywhere"
version = "0.1.0"
edition = "2024"

[dependencies]
toml = "0.9"

serde_json = "1.0"
serde_cbor = "0.11"
serde_bare = "0.5"

serde_merge = "0.1"
optionable = "0.5"

tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"

include_directory = "0.1"

getifs = "0.4"

glob = "0.3"

rand = { version = "0.8" }


# Crypto implementations; we abstract over multiple backends for signatures, encryption, and validation.
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8", "digest"] }
cryptoki = "0.10"
pem = "3"
der = { version = "0.7", features = ["alloc"] }
pkcs8 = { version = "0.10", features = ["pem"] }
base64 = "0.13"
ssh-key = "0.6"
sha2 = { version = "0.10" }

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.dashmap]
version = "6"
features = ["rayon", ] # todo possibly "inline"? Profile first.

[dependencies.wasmtime]
version = "38"

[dependencies.wasmtime-wasi]
version = "38"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.ring]
version = "0.17"
features = ["wasm32_unknown_unknown_js"]


[target.'cfg(windows)'.dependencies]

[target.'cfg(unix)'.dependencies]
